[build-system]
requires = ["hatchling==1.2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "google_calendar",
]

[tool.hatch.build]
include = ["google_calendar/**/*.py"]

[project]
name = "google-calendar"
version = "0.0.1"
authors = [
    {name = "ualivent", email="ualivent@gmail.com"}
]
maintainers = [
    {name = "ualivent", email="ualivent@gmail.com"}
]
description = "Google Calendar for terminal usage."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "black==24.8.0",
    "flake8==7.0.0",
    "google-api-python-client==2.147.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "typer==0.12.15",
]

[project.scripts]
google-calendar = "google_calendar.google_calendar:main default"

